# keyvalue

./: .gitignore  .travis.yml  KeyValue.hs  README.md  keyvalue.cabal
Database/: KeyValue.hs
Database/KeyValue/: Blob.hs  FileOperations.hs  Init.hs  LogOperations.hs  Merge.hs  Parsing.hs  Timestamp.hs  Types.hs
benchmarks/: Main.hs
test/: test-keyvalue.hs
