name: keyvalue
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: GPL-3
license-file: LICENSE
maintainer: anshu.avinash35@gmail.com
category: Database
author: Anshu Avinash
extra-source-files:
    README.md

library
    build-depends:
        base >=4.5 && <4.8,
        hashtables >=1.2 && <1.3,
        directory >=1.2 && <1.3,
        bytestring -any,
        cereal -any,
        filemanip -any,
        filepath -any,
        temporary -any,
        time -any,
        blob -any
    exposed-modules:
        Database.KeyValue
        Database.KeyValue.Blob
    default-language: Haskell2010
    other-modules:
        Database.KeyValue.Init
        Database.KeyValue.Types
        Database.KeyValue.Merge
        Database.KeyValue.Parsing
        Database.KeyValue.Timestamp
        Database.KeyValue.LogOperations
        Database.KeyValue.FileOperations

test-suite test-keyvalue
    build-depends:
        base >=4.5 && <4.8,
        hashtables >=1.2 && <1.3,
        directory >=1.2 && <1.3,
        bytestring -any,
        cereal -any,
        filemanip -any,
        filepath -any,
        temporary -any,
        time -any,
        QuickCheck -any,
        hspec -any
    type: exitcode-stdio-1.0
    main-is: test/test-keyvalue.hs
    default-language: Haskell2010

benchmark bench-keyvalue
    build-depends:
        base >=4.5 && <4.8,
        hashtables >=1.2 && <1.3,
        directory >=1.2 && <1.3,
        bytestring -any,
        cereal -any,
        filemanip -any,
        filepath -any,
        temporary -any,
        time -any,
        criterion -any
    type: exitcode-stdio-1.0
    main-is: benchmarks/Main.hs
    default-language: Haskell2010
    ghc-options: -Wall -O2
